# whisper-burn

./: .gitignore  Cargo.toml  transcription.txt
python/: requirements.txt
src/: audio.rs  beam.rs  helper.rs  lib.rs  token.rs  transcribe.rs
src/model/: load.rs  mod.rs
