[package]
name = "whisper"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = { version = "0.17", features = [
  "ndarray",
  "tui",
  "train",
  "cuda",
  "vulkan",
  "wgpu",
  "webgpu",
  "autotune",
  "fusion",
] }
serde = {version = "1.0", features = ["std", "derive"]}
num-traits = "0.2"
hound = "3.5"
tokenizers = {version = "0.21", default-features = false, features = [
  "onig",
  "http",
]}
npy = "0.4.0"
cfg-if = "1.0"
strum = "0.27"
strum_macros = "0.27"
cpal = { version = "0.16" }
webrtc-vad = "0.4"
rtrb = "0.3"
anyhow = "1"
chrono = "0.4"
